fix interpunct spacing on team page

--- a/themes/vue/source/css/_team.styl
+++ b/themes/vue/source/css/_team.styl
@@ -53,8 +53,9 @@
       li
         display: inline-block
         &::after
-          content: ' · '
-          margin: 0 4px
+          display: inline-block
+          content: '·'
+          margin: 0 8px
         &:last-child::after
           content: ''
       .social
